# calculator_pkg_shrvb32846

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  calculator.py  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
calculator_pkg_shrvb32846/: __init__.py  __main__.py  calculator.py
calculator_pkg_shrvb32846/file_calculator/: __init__.py  file_calculator.py
calculator_pkg_shrvb32846/tests/: test_calculator.py  test_file_calculator.py
scripts/: run.py
