[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-pkg-shrvb32846"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "twine",
    "ty",
]

[project.scripts]
calculator_pkg_shrvb32846 = "calculator_pkg_shrvb32846.__main__:main"
